--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>CV Wafiq</title> <!-- judul halaman web -->
+    <title>CV Wafiq</title>
 
-    <link rel="stylesheet" href="style.css"> <!-- menyambungkan file css --> 
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"/> 
-    <!-- menyambungkan file css dari luar (bukan punya kita) -->
 </head>
 
 <body>
@@ -95,11 +94,3 @@
 </footer>
 
 </html>
-
-<!-- div: untuk mengelompokkan elemen -->
-<!-- class: memberi nama biar bisa dihubungin sama css -->
-<!-- ul: membuat list dengan titik-->
-<!-- li: tempat isi list-nya -->
-<!-- a: buat pindah ke halaman lain -->
-<!-- href: bisa di isi link/id yang ingin dituju -->
-<!-- target=_self: buat pindah ke halaman itu sendiri -->
